# snipcheck

./: .gitignore  .travis.yml  README.md  default.nix  shell.nix  snipcheck.cabal  stack.yaml
.circleci/: config.yml
nix/: overlays.nix  packages.nix  sources.json  versions.json
src/: Snipcheck.hs
