name:                snipcheck
version:             0.1.0.0
homepage:            https://github.com/nmattia/snipcheck#readme
license:             MIT
license-file:        LICENSE
author:              Nicolas Mattia
maintainer:          nicolas@nmattia.com
copyright:           2017 Nicolas Mattia
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Snipcheck
  build-depends:       base >= 4.7 && < 5
                     , pandoc
                     , process
  default-language:    Haskell2010

executable snipcheck-exe
  hs-source-dirs:      exe
  main-is:             Snipcheck.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , snipcheck
  default-language:    Haskell2010
